CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2009 by Bill Kendrick and others
bill@newbreedsoftware.com
http://www.tuxpaint.org/

$Id$

2009.September.27 (0.9.22)
  * New Magic Tools:
    ----------------
    * Blinds - Close window blinds over your picture.
      Perspective - Change the image's perspective.
      Moasic Hexagon, Mosaic irregular, Mosaic square - Glass mosaic effects.
      Zoom - Zoom the image in or out.
      By Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * Puzzle - Slide parts of your picture around like a sliding puzzle.
      By Adam 'foo-script' Rakowski <foo-script@o2.pl>
      with modifications by Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * ROYGBIV Rainbow - Draw a rainbow arc using solid colors of
      Red, Orange, Yellow, Green, Blue, Indigo and Violet.

  * Other Improvements:
    -------------------
    * Starter images can be in SVG format.
      (Avoids loading PNG if SVG with the same name exists.)

    * Widened dialog windows, to help avoid word-wrap and overlap problems
      with some prompts, in some locales.
      (SF.net bug #2834461)

    * Shape Tool now locks rotation into 15 or 5 degree steps, when the
      radius of the shape is very small or small, respectively.
      (SF.net bug #2837177)

    * Shape Tool tries to avoid glitches where lines connect, when shape is
      rotated.  (Rotation of fixed-aspect shapes like Square and Octagon
      stays within the angle of the corners. i.e., rotating a square 140 deg.
      actually only rotates it 30 deg., since it looks identical,
      sans glitches.)
      (SF.net bug #2837177)

    * Created a BASH tab-completion file for Tux Paint, so that
      command-line options are easier to discover (without necessarily
      needing to consult the man page, 'Options' documentation, or --usage
      output).

 * New Starters:
   -------------
    * Elephant
    * Hat
    * Old Soviet Car
    * Skull 